[package]
name = "reapixa"
version = "0.1.0"
edition = "2021"

[dependencies]
pico-args = "0.5"
actix-web = { version = "4.0", default-features = false, features = ["macros"] }
awc = { version = "3.0", default-features = false, features = ["compress-gzip", "rustls"] }
tokio = { version = "*", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maud = { git = "https://github.com/lambda-fairy/maud", features = ["actix-web"] }
percent-encoding = "2.1"
rustls = "0.20"
rustls-native-certs = "0.6"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
rss = "2.0"
# ugoira
zip = { version = "0.6.2", default-features = false, optional = true }
libc = { version = "0.2", optional = true }

[build-dependencies]
cc = { version = "1.0", optional = true }
grass = { version = "0.11", default-features = false }
glob = "0.3"

[features]
ugoira = ["dep:zip", "dep:libc", "dep:cc"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
