[package]
name = "reapixa"
version = "0.1.0"
edition = "2021"

[dependencies]
pico-args = "0.5"
rouille = { version = "3.5", default-features = false }
ureq = { version = "2.4", features = ["json", "tls", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maud = "0.24"
percent-encoding = "2.1"
rustls = "0.20"
rustls-native-certs = "0.6"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde"] }
rss = "2.0"
# ugoira
zip = { version = "0.6.2", default-features = false, optional = true }
libc = { version = "0.2", optional = true }

[build-dependencies]
cc = { version = "1.0", optional = true }
grass = { version = "0.11", default-features = false }
glob = "0.3"

[features]
ugoira = ["dep:zip", "dep:libc", "dep:cc"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
